# rtl-simulator

./: .gitignore  CLAUDE.md  CMakeLists.txt
bench/: run_bench.sh
docs/: simd-acceleration.md
include/surge/: surge.h
src/: main.cpp
src/codegen/: codegen.cpp  codegen.h
src/ir/: builder.cpp  builder.h  ir.cpp  ir.h
src/sim/: runtime.cpp  runtime.h
src/trace/: vcd_writer.cpp  vcd_writer.h
tests/: adder.sv  alu_regfile.sv  alu_regfile_stim.sv  barrel_shifter.sv  casez_decode.sv  counter.sv  counter_hier.sv  crc32.sv  enum_fsm.sv  fifo.sv  fsm.sv  func_test.sv  generate_chain.sv  iface_bus.sv  iface_modport.sv  initial_test.sv  lfsr.sv  mem2d_test.sv  param_adder.sv  pipeline_datapath.sv  riscv_pipeline.sv  spi_master.sv  struct_test.sv  task_test.sv  uart_tx.sv
tests/multi_file/: sub_counter.sv  top_multi.sv
